Dark Mode Fixes and Heart/Like Animation

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -899,6 +899,50 @@ $green-font-color: #19B028;
   background-color: var(--secondary) !important;
 }
 
+// Animations by Carsen Klock @carsenk
+
+.is_animating {
+  animation: pulse-red 2s;
+}
+
+.is_animating_ice {
+  animation: pulse-blue 2s;
+}
+
+@keyframes pulse-red {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
+  }
+  
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
+  }
+  
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
+  }
+}
+
+@keyframes pulse-blue {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(52, 172, 224, 0.7);
+  }
+  
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(52, 172, 224, 0);
+  }
+  
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(52, 172, 224, 0);
+  }
+}
+
 .modal-content {
   background-color: var(--background) !important;
   border-color: var(--border) !important;
